--- a/新店1.html
+++ b/新店1.html
@@ -29,16 +29,15 @@
     <img src="新店1-2.jpg" id="img2">
     <!-- 右邊那張圖 -->
     <div id="menu"><b>推薦菜單</b></div>
-    <div id="submenu">功夫紅燒牛肉麵170元(手打麵+10元) 功夫紅燒牛筋麵180元(手打麵+10元)<br>
-         麻辣蒜香味牛肉麵180元(手打麵+10元) 麻辣蒜香味牛筋麵190元(手打麵+10元)<br> 
-         慢火燉番茄牛肉麵190元(手打麵+10元) 慢火燉番茄半筋半肉牛肉麵195元(手打麵+10元)<br>
-         功夫紅燒牛肉湯麵110元(手打麵+10元) 慢火燉番茄牛肉湯麵130元(手工麵+10元)
-         海鮮湯麵170元 雞腿肉煨湯麵160元 私房豬嫩骨湯麵160元 松花皮蛋肉絲湯麵160元<br>
-         功夫紅燒牛肉乾拌麵170元 老虎麻辣牛肉乾拌麵180元 辣味雪菜肉燥乾拌麵95元 私房豬嫩骨乾拌麵165元<br>
+    <div id="submenu">功夫紅燒牛肉麵170元(手打麵+10元) <br>功夫紅燒牛筋麵180元(手打麵+10元)<br>
+         麻辣蒜香味牛肉麵180元(手打麵+10元)<br> 麻辣蒜香味牛筋麵190元(手打麵+10元)<br> 
+         慢火燉番茄牛肉麵190元(手打麵+10元) <br>慢火燉番茄半筋半肉牛肉麵195元(手打麵+10元)<br>
+         海鮮湯麵170元 雞腿肉煨湯麵160元<br> 私房豬嫩骨湯麵160元 松花皮蛋肉絲湯麵160元<br>
+         辣味雪菜肉燥乾拌麵95元 私房豬嫩骨乾拌麵165元<br>
          燉黑胡椒牛腱肉飯200元 經典麻婆豆腐飯150元<br>
-         豬肉水餃8粒70元 豬肉胡麻水餃80元 豬肉椒麻辣水餃80元 紅燒牛肉湯餃130元<br>
-         功夫牛肉割包80元 香菇芋頭千絲100元 燒肉粽80元 燙今日青菜50元<br>
-         珍珠奶茶(熱/冰)55元 古早鳳梨愛玉冰茶60元 洛神花藍莓冰茶50元 阿嬤水果冰茶65元<br>
+         豬肉水餃8粒70元 豬肉胡麻水餃80元 豬肉椒麻辣水餃80元 紅燒牛肉湯餃130元
+         功夫牛肉割包80元 <br>香菇芋頭千絲100元 燒肉粽80元 <br>燙今日青菜50元
+         珍珠奶茶(熱/冰)55元<br> 古早鳳梨愛玉冰茶60元 洛神花藍莓冰茶50元 阿嬤水果冰茶65元<br>
                       <!-- 改菜單 -->
     </div>
     <div id="comment_title"><b>顧客評論</b></div>
