抽籤圖片修改

--- a/choose_page.html
+++ b/choose_page.html
@@ -204,7 +204,7 @@
     <a href="lottery_mode.html"><div id="btn2"><b>板橋區</b></div></a>
     <a href="lottery_mode.html"><div id="btn3"><b>中和區</b></div></a>
     <a href="lottery_mode.html"><div id="btn4"><b>北投區</b></div></a>
-    <a href="lottery_mode.html"><div id="btn5"><b>士林區</b></div></a>
+    <a href="lottery_士林.html"><div id="btn5"><b>士林區</b></div></a>
     <a href="lottery_mode.html"><div id="btn6"><b>內湖區</b></div></a>
     <a href="lottery_mode.html"><div id="btn7"><b>永和區</b></div></a>
     <a href="lottery_mode.html"><div id="btn8"><b>新莊區</b></div></a>
