新增台北區域

--- a/choose_page.html
+++ b/choose_page.html
@@ -200,30 +200,30 @@
     <span id="div2"><b>新北市</b></span>
     <span id="div3"><b>台北市</b></span>
 
-    <a href="lottery_mode.html"><div id="btn1"><b>土城區</b></div></a>
-    <a href="lottery_mode.html"><div id="btn2"><b>板橋區</b></div></a>
-    <a href="lottery_mode.html"><div id="btn3"><b>中和區</b></div></a>
-    <a href="lottery_mode.html"><div id="btn4"><b>北投區</b></div></a>
+    <a href="lottery_土城.html"><div id="btn1"><b>土城區</b></div></a>
+    <a href="lottery_板橋.html"><div id="btn2"><b>板橋區</b></div></a>
+    <a href="lottery_中和.html"><div id="btn3"><b>中和區</b></div></a>
+    <a href="lottery_北投.html"><div id="btn4"><b>北投區</b></div></a>
     <a href="lottery_士林.html"><div id="btn5"><b>士林區</b></div></a>
-    <a href="lottery_mode.html"><div id="btn6"><b>內湖區</b></div></a>
-    <a href="lottery_mode.html"><div id="btn7"><b>永和區</b></div></a>
-    <a href="lottery_mode.html"><div id="btn8"><b>新莊區</b></div></a>
-    <a href="lottery_mode.html"><div id="btn9"><b>三重區</b></div></a>
-    <a href="lottery_mode.html"><div id="btn10"><b>中山區</b></div></a>
-    <a href="lottery_mode.html"><div id="btn11"><b>大同區</b></div></a>
-    <a href="lottery_mode.html"><div id="btn12"><b>松山區</b></div></a>
-    <a href="lottery_mode.html"><div id="btn13"><b>新店區</b></div></a>
-    <a href="lottery_mode.html"><div id="btn14"><b>三峽區</b></div></a>
-    <a href="lottery_mode.html"><div id="btn15"><b>烏來區</b></div></a>
-    <a href="lottery_mode.html"><div id="btn16"><b>信義區</b></div></a>
-    <a href="lottery_mode.html"><div id="btn17"><b>南港區</b></div></a>
-    <a href="lottery_mode.html"><div id="btn18"><b>大安區</b></div></a>
-    <a href="lottery_mode.html"><div id="btn19"><b>深坑區</b></div></a>
-    <a href="lottery_mode.html"><div id="btn20"><b>平溪區</b></div></a>
-    <a href="lottery_mode.html"><div id="btn21"><b>淡水區</b></div></a>
-    <a href="lottery_mode.html"><div id="btn22"><b>中正區</b></div></a>
-    <a href="lottery_mode.html"><div id="btn23"><b>萬華區</b></div></a>
-    <a href="lottery_mode.html"><div id="btn24"><b>文山區</b></div></a>
+    <a href="lottery_內湖.html"><div id="btn6"><b>內湖區</b></div></a>
+    <a href="lottery_永和.html"><div id="btn7"><b>永和區</b></div></a>
+    <a href="lottery_新莊.html"><div id="btn8"><b>新莊區</b></div></a>
+    <a href="lottery_三重.html"><div id="btn9"><b>三重區</b></div></a>
+    <a href="lottery_中山.html"><div id="btn10"><b>中山區</b></div></a>
+    <a href="lottery_大同.html"><div id="btn11"><b>大同區</b></div></a>
+    <a href="lottery_松山.html"><div id="btn12"><b>松山區</b></div></a>
+    <a href="lottery_新店.html"><div id="btn13"><b>新店區</b></div></a>
+    <a href="lottery_三峽.html"><div id="btn14"><b>三峽區</b></div></a>
+    <a href="lottery_烏來.html"><div id="btn15"><b>烏來區</b></div></a>
+    <a href="lottery_信義.html"><div id="btn16"><b>信義區</b></div></a>
+    <a href="lottery_南港.html"><div id="btn17"><b>南港區</b></div></a>
+    <a href="lottery_大安.html"><div id="btn18"><b>大安區</b></div></a>
+    <a href="lottery_深坑.html"><div id="btn19"><b>深坑區</b></div></a>
+    <a href="lottery_平溪.html"><div id="btn20"><b>平溪區</b></div></a>
+    <a href="lottery_淡水.html"><div id="btn21"><b>淡水區</b></div></a>
+    <a href="lottery_中正.html"><div id="btn22"><b>中正區</b></div></a>
+    <a href="lottery_萬華.html"><div id="btn23"><b>萬華區</b></div></a>
+    <a href="lottery_文山.html"><div id="btn24"><b>文山區</b></div></a>
     
   </body>
 </html>
