--- a/中山1.html
+++ b/中山1.html
@@ -16,22 +16,20 @@
     <div id="intro">
       <p id="name"><b>福大山東蒸餃大王<br></b></p>
       <!-- 改店名 -->
-      <p id="star"><b>google評價：★★★★☆</b></p></div>
+      <p id="star"><b>google評價：4.0★</b></p></div>
       <!-- google評價 -->
       <div id ="about">
-        <b>店家資訊</b><div style="font-size: 20px;"><br>地址:台北市中山區中山北路一段140巷11號<br>
+        <b>店家資訊</b><div style="font-size: 20px;"><br>地址：台北市中山區中山北路一段140巷11號<br>
         <!-- 店家地址 -->
         營業時間：11：30 到 20:30，星期一公休<br>
         <!-- 營業時間 -->
         店家電話：(02)2541-3195</div>
         <!-- 店家電話 -->
       </div>
-    <img src="pic/中山區 1.菜單.jpg" id="img2">
+    <img src="pic/中山區 P 1.5.jpg" id="img2">
     <!-- 右邊那張圖 -->
     <div id="menu"><b>推薦菜單</b></div>
-    <div id="submenu">湯餃140元 蒸餃95元 牛肉麵140元<br>香菇炸醬麵85元 山東餛飩麵85元<br>
-      酸菜肉絲麵85元 牛肉湯麵85元<br>酸辣麵85元 抄手麵90元<br>牛肉湯110元 酸辣湯45元 紫菜蛋花湯45元<br>
-      山東大餛飩80元 各種小菜30元起<br>
+    <div id="submenu">湯餃140元 蒸餃95元 牛肉麵140元<br>抄手麵90元 酸辣湯45元 山東大餛飩80元<br>
     <!-- 改菜單 -->
     </div>
     <div id="comment_title"><b>顧客評論</b></div>
