--- a/北投1.html
+++ b/北投1.html
@@ -16,23 +16,22 @@
     <div id="intro">
       <p id="name"><b>阿財鍋貼水餃專賣店<br></b></p>
       <!-- 改店名 -->
-      <p id="star"><b>google評價：★★★☆☆</b></p></div>
+      <p id="star"><b>google評價：3.7★</b></p></div>
       <!-- google評價 -->
       <div id ="about">
-        <b>店家資訊</b><div style="font-size: 20px;"><br>地址:台北市北投區裕民一路40巷5號<br>
+        <b>店家資訊</b><div style="font-size: 20px;"><br>地址：台北市北投區裕民一路40巷5號<br>
         <!-- 店家地址 -->
         營業時間：11：00 到 21:30，星期三公休<br>
         <!-- 營業時間 -->
         店家電話：(02)2826-2424</div>
         <!-- 店家電話 -->
       </div>
-    <img src="pic/北投區 1.菜單.jpg" id="img2">
+    <img src="pic/北投區 P 1.1.jpg" id="img2">
     <!-- 右邊那張圖 -->
     <div id="menu"><b>推薦菜單</b></div>
     <div id="submenu">韭黃水餃鍋貼6元/個 酸辣湯30元<br>
       高麗菜鮮肉水餃6元/個 玉米濃湯30元<br>
       韭黃鮮肉水餃6元/個 豆漿20元<br>
-      冷凍生鮮水餃100元/每包20個<br>
     <!-- 改菜單 -->
     </div>
     <div id="comment_title"><b>顧客評論</b></div>
