--- a/北投4.html
+++ b/北投4.html
@@ -16,10 +16,10 @@
     <div id="intro">
       <p id="name"><b>矮仔財滷肉飯<br></b></p>
       <!-- 改店名 -->
-      <p id="star"><b>google評價：★★★★☆</b></p></div>
+      <p id="star"><b>google評價：4.0★</b></p></div>
       <!-- google評價 -->
       <div id ="about">
-        <b>店家資訊</b><div style="font-size: 20px;"><br>地址:台北市北投區新市街30號2號樓436號 (北投市場)<br>
+        <b>店家資訊</b><div style="font-size: 20px;"><br>地址：台北市北投區新市街30號2號樓436號 (北投市場)<br>
         <!-- 店家地址 -->
         營業時間：07：00 到 13：00，星期一、四公休<br>
         <!-- 營業時間 -->
@@ -29,10 +29,7 @@
     <img src="pic/北投區 P 4.4.jpg" id="img2">
     <!-- 右邊那張圖 -->
     <div id="menu"><b>推薦菜單</b></div>
-    <div id="submenu">滷肉飯35元（大）25元（小）<br>排骨粥55元 排骨湯45元<br>
-        苦瓜湯40元 赤肉湯40元<br>蚵仔湯60元 紅燒蹄膀50元<br>
-        白切肉50元 滷白菜25元<br>滷筍絲25元 燙青菜30元<br>
-        滷蛋10元 豆腐10元<br>
+    <div id="submenu">滷肉飯35元（大）25元（小）<br>紅燒蹄膀50元 滷白菜25元<br>滷蛋10元 豆腐10元<br>
     <!-- 改菜單 -->
     </div>
     <div id="comment_title"><b>顧客評論</b></div>
