--- a/大同1.html
+++ b/大同1.html
@@ -16,7 +16,7 @@
     <div id="intro">
       <p id="name"><b>三多屋爸爸嘴<br></b></p>
       <!-- 改店名 -->
-      <p id="star"><b>google評價：★★★★☆</b></p></div>
+      <p id="star"><b>google評價：4.1★</b></p></div>
       <!-- google評價 -->
       <div id ="about">
         <b>店家資訊</b><div style="font-size: 20px;"><br>地址：台北市大同區太原路19號1樓<br>
@@ -26,12 +26,12 @@
         店家電話：(02)2555-7708</div>
         <!-- 店家電話 -->
       </div>
-    <img src="pic/大同區 1.菜單.jpg" id="img2">
+    <img src="pic/大同區 P 1.1.jpg" id="img2">
     <!-- 右邊那張圖 -->
     <div id="menu"><b>推薦菜單</b></div>
-    <div id="submenu">三多屋爸爸嘴今日特餐250元<br>豪華蓋飯480元 生魚片蓋飯250元<br>全鮭蓋飯250元 散壽司（限量）200元<br>
-        綜合壽司（限量）200元<br>鮭魚親子丼250元 佛跳牆套餐（限量）480元<br>現切綜合生魚片（1000元/500元/300元/200元）<br>
-        櫻花蝦鮭魚炒飯150元<br>限量單點塩烤鮭魚頭250元<br>單點挪威鯖魚130元<br>辣味螺肉200元 龍蝦沙拉200元<br>單點當日湯品50元<br>
+    <div id="submenu">三多屋爸爸嘴今日特餐250元<br>豪華蓋飯480元 生魚片蓋飯250元<br>全鮭蓋飯250元 鮭魚親子丼250元<br>
+        散壽司（限量）200元 綜合壽司（限量）200元<br>佛跳牆套餐（限量）480元<br>現切綜合生魚片（1000元/500元/300元/200元）<br>
+        櫻花蝦鮭魚炒飯150元 單點當日湯品50元<br>
     <!-- 改菜單 -->
     </div>
     <div id="comment_title"><b>顧客評論</b></div>
