--- a/大同4.html
+++ b/大同4.html
@@ -9,14 +9,14 @@
     <!-- 改地區 -->
   </head>
   <body>
-    <img src="pic/大同區 P 4.1.jpg" id="img">
+    <img src="pic/大同區 P 4.2.jpg" id="img">
     <!-- 最上面的圖 -->
     <div id="div0"></div>
     <div id="div2"></div>
     <div id="intro">
       <p id="name"><b>老麵店<br></b></p>
       <!-- 改店名 -->
-      <p id="star"><b>google評價：★★★★☆</b></p></div>
+      <p id="star"><b>google評價：4.3★</b></p></div>
       <!-- google評價 -->
       <div id ="about">
         <b>店家資訊</b><div style="font-size: 20px;"><br>地址：台北市大同區迪化街二段215-8號<br>
@@ -26,11 +26,10 @@
         店家電話：(02)2598-1388</div>
         <!-- 店家電話 -->
       </div>
-    <img src="pic/大同區 4.菜單.jpg" id="img2">
+    <img src="pic/大同區 P 4.5.jpg" id="img2">
     <!-- 右邊那張圖 -->
     <div id="menu"><b>推薦菜單</b></div>
-    <div id="submenu">乾麵60元（大）35元（小）<br>湯麵60元（大）35元（小）<br>肉骨麵50元 餛飩麵50元<br>
-        肉骨湯35元 青菜湯35元<br>餛飩湯35元 燙青菜35元<br> 
+    <div id="submenu">乾麵60元（大）35元（小）<br>肉骨麵50元 餛飩麵50元 肉骨湯35元<br>
     <!-- 改菜單 -->
     </div>
     <div id="comment_title"><b>顧客評論</b></div>
