--- a/大同5.html
+++ b/大同5.html
@@ -9,14 +9,14 @@
     <!-- 改地區 -->
   </head>
   <body>
-    <img src="pic/大同區 P 5.1.jpg" id="img">
+    <img src="pic/大同區 P 5.2.jpg" id="img">
     <!-- 最上面的圖 -->
     <div id="div0"></div>
     <div id="div2"></div>
     <div id="intro">
       <p id="name"><b>阿仁炒飯<br></b></p>
       <!-- 改店名 -->
-      <p id="star"><b>google評價：★★★★☆</b></p></div>
+      <p id="star"><b>google評價：4.3★</b></p></div>
       <!-- google評價 -->
       <div id ="about">
         <b>店家資訊</b><div style="font-size: 20px;"><br>地址：台北市大同區哈密街45巷2之4號<br>
@@ -26,15 +26,11 @@
         店家電話：(02)2598-6747</div>
         <!-- 店家電話 -->
       </div>
-    <img src="pic/大同區 5.菜單.jpg" id="img2">
+    <img src="pic/大同區 P 5.4.jpg" id="img2">
     <!-- 右邊那張圖 -->
     <div id="menu"><b>推薦菜單</b></div>
-    <div id="submenu">什錦招牌炒飯110元<br>什錦咖哩炒飯110元<br>牛肉咖哩炒飯110元<br>蝦仁蛋炒飯100元 臘肉蛋炒飯90元<br>
-        肉絲蛋炒飯90元<br>牛肉咖哩炒麵100元（烏龍/油麵/白麵）<br>海鮮咖哩炒麵100元（烏龍/油麵/白麵）<br>
-        海鮮炒麵100元（烏龍/油麵/白麵）<br>蝦仁炒麵100元（烏龍/油麵/白麵）<br>肉絲炒麵80元（烏龍/油麵/白麵）<br>
-        牛肉咖哩湯麵100元（烏龍/油麵/白麵/粥）<br>海鮮咖哩湯麵100元（烏龍/油麵/白麵/粥）<br>海鮮湯麵100元（烏龍/油麵/白麵/粥）<br>
-        蝦仁湯麵100元（烏龍/油麵/白麵/粥）<br>肉絲湯麵80元（烏龍/油麵/白麵/粥）<br>豬腸冬粉70元 虱目魚肚湯70元<br>
-        潮鯛鮮魚湯70元 鮮蚵豆腐湯60元<br>蛤仔薑絲湯60元 酸菜豬腸湯50元<br>
+    <div id="submenu">什錦招牌炒飯110元<br>什錦咖哩炒飯110元<br>臘肉蛋炒飯90元<br>海鮮炒麵100元（烏龍/油麵/白麵）<br>
+      蝦仁炒麵100元（烏龍/油麵/白麵）<br>蛤仔薑絲湯60元 酸菜豬腸湯50元<br>
         <!-- 改菜單 -->
     </div>
     <div id="comment_title"><b>顧客評論</b></div>
