--- a/中山2.html
+++ b/中山2.html
@@ -9,36 +9,30 @@
     <!-- 改地區 -->
   </head>
   <body>
-    <img src="pic/中山區 P 2.1.jpg" id="img">
+    <img src="pic/中山區 P 2.4.jpg" id="img">
     <!-- 最上面的圖 -->
     <div id="div0"></div>
     <div id="div2"></div>
     <div id="intro">
       <p id="name"><b>二月半蕎麥麵<br></b></p>
       <!-- 改店名 -->
-      <p id="star"><b>google評價：★★★★☆</b></p></div>
+      <p id="star"><b>google評價：3.9★</b></p></div>
       <!-- google評價 -->
       <div id ="about">
-        <b>店家資訊</b><div style="font-size: 20px;"><br>地址:台北市中山區中山北路二段20巷1-1號<br>
+        <b>店家資訊</b><div style="font-size: 20px;"><br>地址：台北市中山區中山北路二段20巷1-1號<br>
         <!-- 店家地址 -->
         營業時間：11：30 到 13:50 / 17：30 到 19：30，無公休<br>
         <!-- 營業時間 -->
         店家電話：(02)2563-8008</div>
         <!-- 店家電話 -->
       </div>
-    <img src="pic/中山區 2.菜單(2).jpg" id="img2">
+    <img src="pic/中山區 P 2.2.jpg" id="img2">
     <!-- 右邊那張圖 -->
     <div id="menu"><b>推薦菜單</b></div>
-    <div id="submenu">鯖魚冷麵360元 鯖魚湯麵360元<br>冷壓南蠻蕎麥麵360元<br>雪の肝沙拉280元 野菇生菜沙拉220元<br>
-        蔬菜可樂餅140元 起司可樂餅160元<br>青甘下巴甘露煮300元 炸牡蠣300元<br>澎湖冰卷花枝220元<br>甘煮星鰻黃瓜卷160元<br>
-        吻仔魚水雲酢140元<br>生腐皮明太子180元<br>蔥卷鴨燒220元 燉煮牛肉220元<br>紫蘇干貝250元 酥炸海鮮餅220元<br>
-        山藥泥80元 溫泉蛋80元<br>納豆80元 健康冷豆腐120元<br>魚板（日本產）180元<br>金平牛蒡150元 炸蕎麥餅140元<br>
-        炸中卷180元 揚出豆腐160元<br>野菜天婦羅220元 蝦天婦羅280元<br>雞肉天婦羅280元 海鮮花揚30元<br>青甘生魚片280元<br>
-        黑糖年糕120元<br>蝦天婦羅蕎麥麵（沾/冷/湯）380元<br>雞肉天婦羅蕎麥麵（沾/冷/湯）380元<br>雞花枝ーロ天婦羅蕎麥麵（沾/冷/湯）320元<br>
-        蔬菜天婦羅蕎麥麵（沾/冷/湯）320元<br>納豆溫泉蛋蕎麥麵（冷）300元<br>山藥泥溫泉蛋蕎麥麵（冷/湯）300元<br>根莖野菜蕎麥麵（沾/湯）280元<br>
-        柚子香蕎麥麵（湯）240元<br>鴨南蠻蕎麥麵（沾/湯）330元<br>牛肉蕎麥麵（沾/湯）300元<br>原味一品蕎麥麵（沾/湯）180元<br>海鮮花揚蕎麥麵（沾/湯）400元<br>
-        XO干貝胡麻蕎麥麵（沾）250元<br>日本啤酒180元/瓶 白鹿180元/含<br>那由多の刻（蕎麥）180元/杯<br>薩摩鉄幹（芋）180元/杯<br>十割蕎麥燒耐180元/杯<br>
-        YUZU柚子酒160元/杯<br>紀州蜂蜜梅酒160元/杯<br>紀州赤ぃ梅酒160元/杯<br>紀州綠茶梅酒160元/杯<br>可樂80元/杯<br>
+    <div id="submenu">野菜天婦羅220元 蝦天婦羅280元<br>雞肉天婦羅280元 海鮮花揚30元<br>蝦天婦羅蕎麥麵（沾/冷/湯）380元<br>雞肉天婦羅蕎麥麵（沾/冷/湯）380元<br>
+      雞花枝ーロ天婦羅蕎麥麵（沾/冷/湯）320元<br>蔬菜天婦羅蕎麥麵（沾/冷/湯）320元<br>鯖魚冷麵360元 鯖魚湯麵360元<br>冷壓南蠻蕎麥麵360元<br>納豆溫泉蛋蕎麥麵（冷）300元<br>
+      山藥泥溫泉蛋蕎麥麵（冷/湯）300元<br>根莖野菜蕎麥麵（沾/湯）280元<br>柚子香蕎麥麵（湯）240元<br>鴨南蠻蕎麥麵（沾/湯）330元<br>牛肉蕎麥麵（沾/湯）300元<br>
+      原味一品蕎麥麵（沾/湯）180元<br>海鮮花揚蕎麥麵（沾/湯）400元<br>XO干貝胡麻蕎麥麵（沾）250元<br>
     <!-- 改菜單 -->
     </div>
     <div id="comment_title"><b>顧客評論</b></div>
