--- a/中山3.html
+++ b/中山3.html
@@ -16,22 +16,21 @@
     <div id="intro">
       <p id="name"><b>富霸王豬腳<br></b></p>
       <!-- 改店名 -->
-      <p id="star"><b>google評價：★★★★☆</b></p></div>
+      <p id="star"><b>google評價：4.0★</b></p></div>
       <!-- google評價 -->
       <div id ="about">
-        <b>店家資訊</b><div style="font-size: 20px;"><br>地址:台北市中山區南京東路二段115巷20號<br>
+        <b>店家資訊</b><div style="font-size: 20px;"><br>地址：台北市中山區南京東路二段115巷20號<br>
         <!-- 店家地址 -->
         營業時間：11：00 到 20:00，星期一、日公休<br>
         <!-- 營業時間 -->
         店家電話：(02)2507-1918</div>
         <!-- 店家電話 -->
       </div>
-    <img src="pic/中山區 3.菜單(1).jpg" id="img2">
+    <img src="pic/中山區 P 3.4.jpg" id="img2">
     <!-- 右邊那張圖 -->
     <div id="menu"><b>推薦菜單</b></div>
-    <div id="submenu">霸王腿扣130元 霸王腿節100元<br>霸王腳蹄80元 腿扣便當130元<br>腿節便當130元 綜合便當130元<br>
-        腳蹄便當120元 白飯15元<br>滷肉飯25元 蘿蔔湯（冬天）35元<br>竹筍湯（夏天）35元 味噌湯25元<br>
-        腿扣（外帶）23元/兩<br>腿節（外帶）20元/兩<br>綜合（外帶）18元/兩<br>腳蹄（外帶）15元/兩<br>滷汁一杓（外帶）60元<br>
+    <div id="submenu">綜合便當130元 腿節便當130元<br>腿扣便當130元 霸王腳蹄80元<br>霸王腿扣130元 霸王腿節100元<br>腳蹄便當120元 滷肉飯25元<br>
+        筍絲15元 滷蛋15元 油豆腐20元<br>
     <!-- 改菜單 -->
     </div>
     <div id="comment_title"><b>顧客評論</b></div>
