--- a/中山4.html
+++ b/中山4.html
@@ -16,23 +16,21 @@
     <div id="intro">
       <p id="name"><b>林東芳牛肉麵<br></b></p>
       <!-- 改店名 -->
-      <p id="star"><b>google評價：★★★★☆</b></p></div>
+      <p id="star"><b>google評價：3.9★</b></p></div>
       <!-- google評價 -->
       <div id ="about">
-        <b>店家資訊</b><div style="font-size: 20px;"><br>地址:台北市中山區八德路二段322號<br>
+        <b>店家資訊</b><div style="font-size: 20px;"><br>地址：台北市中山區八德路二段322號<br>
         <!-- 店家地址 -->
         營業時間：11：00 到 03:00，無公休<br>
         <!-- 營業時間 -->
         店家電話：(02)2752-2556</div>
         <!-- 店家電話 -->
       </div>
-    <img src="pic/中山區 4.菜單.jpg" id="img2">
+    <img src="pic/中山區 P 4.1.jpg" id="img2">
     <!-- 右邊那張圖 -->
     <div id="menu"><b>推薦菜單</b></div>
-    <div id="submenu">牛肉（麵/湯）200元（大）170元（小）<br>半筋半肉（麵/湯）270元（大）220元（小）<br>
-        牛肚（麵/湯）250元（大）220元（小）<br>牛筋（麵/湯）280元（大）250元（小）<br>牛肉湯麵130元（大）110元（小）<br>
-        切牛肉150元 切牛肚150元<br>切牛腸150元 切牛筋160元<br> 花干40元 小魚干40元 豆干40元<br>豬頭皮40元 小黃瓜40元<br>
-        豆皮40元 小刈菜40元 泡菜40元<br>辣油140元<br>
+    <div id="submenu">半筋半肉（麵/湯）270元（大）220元（小）<br>牛肉（麵/湯）200元（大）170元（小）<br>
+        牛筋（麵/湯）280元（大）250元（小）<br>牛肉湯麵130元（大）110元（小）<br>
     <!-- 改菜單 -->
     </div>
     <div id="comment_title"><b>顧客評論</b></div>
