--- a/內湖1.html
+++ b/內湖1.html
@@ -16,7 +16,7 @@
     <div id="intro">
       <p id="name"><b>劉老太老潼關肉夾饃<br></b></p>
       <!-- 改店名 -->
-      <p id="star"><b>google評價：★★★★☆</b></p></div>
+      <p id="star"><b>google評價：4.2★</b></p></div>
       <!-- google評價 -->
       <div id ="about">
         <b>店家資訊</b><div style="font-size: 20px;"><br>地址：台北市內湖區文德路22巷9弄60號<br>
@@ -26,14 +26,12 @@
         店家電話：0916-425-573</div>
         <!-- 店家電話 -->
       </div>
-    <img src="pic/內湖區 1.菜單.jpg" id="img2">
+    <img src="pic/內湖區 P 1.1.jpg" id="img2">
     <!-- 右邊那張圖 -->
     <div id="menu"><b>推薦菜單</b></div>
     <div id="submenu">水盆羊肉155元（+冬粉）130元（湯）<br>蘿蔔羊湯60元（不含羊肉）<br>
         經典肉夾饃80元（豬胛心肉）<br>低脂肉夾饃85元（豬胛心肉）<br>黃燜雞肉夾饃85元<br>
-        月牙餅30元<br>古法秘製酸梅湯35元<br>經典肉夾饃+蘿蔔羊湯130元<br>
-        經典肉夾饃+酸梅湯110元<br>水盆羊肉+月牙餅155元<br>水盆羊肉+月牙餅+冬粉180元<br>
-        2*經典肉夾饃+1*蘿蔔羊湯+2*酸梅湯270元<br>2*經典肉夾饃+1*水盆羊肉（湯）+2*酸梅湯350元<br>
+        月牙餅30元 古法秘製酸梅湯35元<br>
     <!-- 改菜單 -->
     </div>
     <div id="comment_title"><b>顧客評論</b></div>
