--- a/內湖2.html
+++ b/內湖2.html
@@ -16,7 +16,7 @@
     <div id="intro">
       <p id="name"><b>福岡屋拉麵<br></b></p>
       <!-- 改店名 -->
-      <p id="star"><b>google評價：★★★★☆</b></p></div>
+      <p id="star"><b>google評價：4.1★</b></p></div>
       <!-- google評價 -->
       <div id ="about">
         <b>店家資訊</b><div style="font-size: 20px;"><br>地址：台北市內湖區內湖路一段323巷6號<br>
@@ -26,21 +26,13 @@
         店家電話：(02)8797-2595</div>
         <!-- 店家電話 -->
       </div>
-    <img src="pic/內湖區 2.菜單(1).jpg" id="img2">
+    <img src="pic/內湖區 P 2.4.jpg" id="img2">
     <!-- 右邊那張圖 -->
     <div id="menu"><b>推薦菜單</b></div>
-    <div id="submenu">和歌醬油（炸雞）130元（大）110元（小）<br>和歌醬油（叉燒）130元（大）110元（小）<br>和歌醬油（玉米海帶芽）130元（大）110元（小）<br>
-        和歌醬油（日本炸蝦）160元（大）140元（小）<br>和歌醬油（豬排）170元（大）150元（小）<br>和歌醬油（鱈魚）160元（大）140元（小）<br>
-        白湯原味（炸雞）140元（大）120元（小）<br>白湯原味（叉燒）140元（大）120元（小）<br>白湯原味（玉米海帶芽）140元（大）120元（小）<br>
-        白湯原味（日本炸蝦）170元（大）150元（小）<br>白湯原味（豬排）180元（大）160元（小）<br>白湯原味（鱈魚）170元（大）150元（小）<br>
-        咖哩（炸雞）140元（大）120元（小）<br>咖哩（叉燒）140元（大）120元（小）<br>咖哩（玉米海帶芽）140元（大）120元（小）<br>
-        咖哩（日本炸蝦）170元（大）150元（小）<br>咖哩（豬排）180元（大）160元（小）<br>咖哩（鱈魚）170元（大）150元（小）<br>
-        味噌（炸雞）140元（大）120元（小）<br>味噌（叉燒）140元（大）120元（小）<br>味噌（玉米海帶芽）140元（大）120元（小）<br>
-        味噌（豬排）180元（大）160元（小）<br>味噌（日本炸蝦）170元（大）150元（小）<br>味噌（鱈魚）170元（大）150元（小）<br>
-        味噌（素食麵）170元（大）150元（小）<br>日式乾麵80元（辣/不辣）<br>咖哩乾麵80元（辣/不辣）<br>超級炸豆腐55元（一份）35元（半份）<br>
-        單點叉燒110元（一份）55元（半份）<br>日式炸雞110元（一份）55元（半份）<br>無敵炸豬排100元（加麵+10元）<br>鮮蝦可樂餅50元（加湯+20元）<br>
-        起司可樂餅40元<br>咖哩可樂餅30元<br>南瓜可樂餅35元<br>鱈魚（兩片）85元<br>炸蝦天婦羅（兩尾）90元<br>燙青菜30元<br>素雞25元 小黃瓜25元<br>
-        泡菜35元 黃金蛋15元<br>可樂/雪碧20元<br>
+    <div id="submenu">
+        白湯原味（炸雞）140元（大）120元（小）<br>白湯原味（叉燒）140元（大）120元（小）<br>白湯原味（日本炸蝦）170元（大）150元（小）<br>
+        白湯原味（豬排）180元（大）160元（小）<br>白湯原味（鱈魚）170元（大）150元（小）<br>單點叉燒110元（一份）55元（半份）<br>
+        日式炸雞110元（一份）55元（半份）<br>
     <!-- 改菜單 -->
     </div>
     <div id="comment_title"><b>顧客評論</b></div>
