--- a/內湖4.html
+++ b/內湖4.html
@@ -9,14 +9,14 @@
     <!-- 改地區 -->
   </head>
   <body>
-    <img src="pic/內湖區 P 4.2.jpg" id="img">
+    <img src="pic/內湖區 P 4.1.jpg" id="img">
     <!-- 最上面的圖 -->
     <div id="div0"></div>
     <div id="div2"></div>
     <div id="intro">
       <p id="name"><b>萬兩食堂<br></b></p>
       <!-- 改店名 -->
-      <p id="star"><b>google評價：★★★★☆</b></p></div>
+      <p id="star"><b>google評價：4.2★</b></p></div>
       <!-- google評價 -->
       <div id ="about">
         <b>店家資訊</b><div style="font-size: 20px;"><br>地址：台北市內湖區內湖路一段355-1號<br>
@@ -26,15 +26,12 @@
         店家電話：(02)2657-6160</div>
         <!-- 店家電話 -->
       </div>
-    <img src="pic/內湖區 4.菜單.jpg" id="img2">
+    <img src="pic/內湖區 P 4.2.jpg" id="img2">
     <!-- 右邊那張圖 -->
     <div id="menu"><b>推薦菜單</b></div>
-    <div id="submenu">招牌紅燒牛肉麵160元（辣/不辣）<br>紅燒牛雙寶麵（牛肉、牛肚）160元（辣/不辣）<br>
-      紅燒半筋半肉麵180元（辣/不辣）<br>紅燒三寶麵（牛肉、牛筋、牛肚）200元（辣/不辣）<br>
-      紅燒牛筋麵200元（辣/不辣）<br>紅燒湯麵85元（辣/不辣）<br>紅油炒手85元 炸醬麵80元<br>川味担担麵80元<br>
-      雙醬麵（炸醬+麻醬）80元<br>川丸子白菜麵100元<br>現炸排骨湯麵110元<br>現炸排骨乾麵110元<br>紅油炒手拌麵110元<br>
-      香辣牛肉拌麵170元<br>現炸排骨飯125元<br>紅燒牛腩飯160元<br>現炸排骨80元<br>川丸子白菜湯75元<br>紅燒牛肉湯140元<br>
-      白飯/例湯15元<br>小菜35元 燙青菜45元<br>滷花干35元<br>滷豬頭皮60<br>滷大腸頭100元<br>
+    <div id="submenu">招牌紅燒牛肉麵160元（辣/不辣）<br>紅燒半筋半肉麵180元（辣/不辣）<br>
+      川丸子白菜麵100元<br>現炸排骨湯麵110元<br>現炸排骨乾麵110元<br>現炸排骨飯125元<br>現炸排骨80元<br>
+      紅油炒手拌麵110元<br>紅燒牛腩飯160元<br>川丸子白菜湯75元<br>紅燒牛肉湯140元<br>
     <!-- 改菜單 -->
     </div>
     <div id="comment_title"><b>顧客評論</b></div>
