--- a/北投5.html
+++ b/北投5.html
@@ -16,30 +16,21 @@
     <div id="intro">
       <p id="name"><b>侯美國紅茶好吃雞腿飯<br></b></p>
       <!-- 改店名 -->
-      <p id="star"><b>google評價：★★★☆☆</b></p></div>
+      <p id="star"><b>google評價：3.5★</b></p></div>
       <!-- google評價 -->
       <div id ="about">
-        <b>店家資訊</b><div style="font-size: 20px;"><br>地址:台北市北投區明德路333巷39號<br>
+        <b>店家資訊</b><div style="font-size: 20px;"><br>地址：台北市北投區明德路333巷39號<br>
         <!-- 店家地址 -->
         營業時間：10：30 到 21:00，無公休<br>
         <!-- 營業時間 -->
         店家電話：(02)2828-5685</div>
         <!-- 店家電話 -->
       </div>
-    <img src="pic/北投區 5.菜單.jpg" id="img2">
+    <img src="pic/北投區 P 5.3.jpeg" id="img2">
     <!-- 右邊那張圖 -->
     <div id="menu"><b>推薦菜單</b></div>
-    <div id="submenu">好吃雞腿飯65元<br>好吃雞腿便當90元<br>雞油飯25元 白飯15元<br>
-        乾麵35元 麻醬麵40元<br>乾意麵40元 乾米血40元<br>麻油乾麵線60元（大）40元（小）<br>
-        招牌麻油雞160元（加麵線）140元<br>麻油腰子湯140元（加麵線）120元<br>
-        麻油鮮魚湯105元（加麵線）85元<br>麻油赤肉湯100元（加麵線）80元<br>
-        麻油豬肝湯90元（加麵線）70元<br>麻油米血湯85元（加麵線）65元<br>
-        麻油湯麵線70元（大）55元（小）<br>腰子清湯120元（加麵線）100元<br>
-        鮮魚清湯90元（加麵線）70元<br>赤肉清湯80元（加麵線）60元<br>
-        豬肝清湯70元（加麵線）50元<br>米血清湯70元（加麵線）50元<br>
-        好吃雞肉90元（大）45元（小）<br>豆皮20元 滷蛋10元<br>
-        燙青菜35元<br>
-
+    <div id="submenu">好吃雞腿便當90元<br>好吃雞腿飯65元<br>招牌麻油雞160元（加麵線）140元<br>
+      麻油湯麵線70元（大）55元（小）<br>麻油乾麵線60元（大）40元（小）<br>好吃雞肉90元（大）45元（小）<br>
     <!-- 改菜單 -->
     </div>
     <div id="comment_title"><b>顧客評論</b></div>
