--- a/士林3.html
+++ b/士林3.html
@@ -16,17 +16,17 @@
     <div id="intro">
       <p id="name"><b>好朋友涼麵<br></b></p>
       <!-- 改店名 -->
-      <p id="star"><b>google評價：★★★★☆</b></p></div>
+      <p id="star"><b>google評價：4.2★</b></p></div>
       <!-- google評價 -->
       <div id ="about">
-        <b>店家資訊</b><div style="font-size: 20px;"><br>地址:台北市士林區大南路31號<br>
+        <b>店家資訊</b><div style="font-size: 20px;"><br>地址：台北市士林區大南路31號<br>
         <!-- 店家地址 -->
         營業時間：16：30 到 23:30，星期四公休<br>
         <!-- 營業時間 -->
         店家電話：(02)2881-1197</div>
         <!-- 店家電話 -->
       </div>
-    <img src="pic/士林區 3.菜單.jpg" id="img2">
+    <img src="pic/士林區 P 3.4.jpg" id="img2">
     <!-- 右邊那張圖 -->
     <div id="menu"><b>推薦菜單</b></div>
     <div id="submenu">涼麵60元（大）45元（小）<br>味噌湯35元（加蛋）25元（不加）
