--- a/士林4.html
+++ b/士林4.html
@@ -16,35 +16,22 @@
     <div id="intro">
       <p id="name"><b>寶飽煲 <br></b></p>
       <!-- 改店名 -->
-      <p id="star"><b>google評價：★★★★☆</b></p></div>
+      <p id="star"><b>google評價：4.3★</b></p></div>
       <!-- google評價 -->
       <div id ="about">
-        <b>店家資訊</b><div style="font-size: 20px;"><br>地址:台北市士林區福壽街3號<br>
+        <b>店家資訊</b><div style="font-size: 20px;"><br>地址：台北市士林區福壽街3號<br>
         <!-- 店家地址 -->
         營業時間：11：30 到 14:00 / 17：30 到 20：00，星期一公休<br>
         <!-- 營業時間 -->
         店家電話：(02)2831-3481</div>
         <!-- 店家電話 -->
       </div>
-    <img src="pic/士林區 4.菜單.jpg" id="img2">
+    <img src="pic/士林區 P 4.2.jpg" id="img2">
     <!-- 右邊那張圖 -->
     <div id="menu"><b>推薦菜單</b></div>
-    <div id="submenu">黑胡椒牛肉煲260元<br>沙茶牛肉煲260元<br>蠔油牛肉煲260元<br>咖哩牛肉煲260元<br>鐵板牛柳300元<br>
-        紅燒牛腩煲280元<br>沙茶羊肉煲260元<br>咖哩羊肉煲260元<br>咖哩雞肉煲260元<br>香滑雞肉煲260元<br>蔥油雞330元<br>
-        宮保雞丁280元<br>醬爆雞丁280元<br>三杯花枝煲330元<br>三杯大腸煲320元<br>三杯雞肉煲320元<br>蜜汁排骨260元<br>
-        豉汁排骨260元<br>辣椒干絲260元<br>魚板肉絲260元<br>客家小炒290元<br>炒鹹豬肉290元<br>麻辣大腸煲260元<br>
-        醬爆肉絲270元<br>麻辣蹄筋煲290元<br>紅燒蹄筋煲290元<br>清蒸尼羅魚350元<br>香酥尼羅魚350元<br>糖醋尼羅魚350元<br>
-        清蒸鱈魚390元<br>香酥鱈魚390元<br>清蒸鱸魚350元<br>糖醋鱸魚350元<br>鹹魚雞粒豆腐煲280元<br>雪菜豆腐煲(可素)250元<br>
-        鮪魚豆腐煲270元<br>什錦豆腐煲(可素)250元<br>麻婆豆腐(可素)250元<br>鐵板豆腐300元<br>炒時蔬(可素)100元<br>
-        開陽白菜(可素)140元<br>莧菜小魚(可素)150元<br>魚香茄子煲(可素)260元<br>紅燒茄子(可素)260元<br>炒香筍(可素)260元<br>
-        鹹蛋苦瓜(可素)260元<br>金針肉絲湯(可素)100元<br>蛤仔湯100元 下水湯100元<br>什錦湯(可素)120元<br>玉米湯(可素)120元<br>
-        酸辣湯(可素)120元<br>沙茶牛肉燴飯90元<br>沙茶羊肉燴飯90元<br>沙茶肉絲燴飯90元<br>滑蛋牛肉燴飯90元<br>滑蛋羊肉燴飯90元<br>
-        滑蛋蝦仁燴飯90元<br>滑蛋肉絲燴飯90元<br>什錦燴飯90元<br>素燴飯90元<br>沙茶牛肉炒飯100元<br>沙茶羊肉炒飯100元<br>
-        蝦仁蛋炒飯90元<br>火腿蛋炒飯90元<br>肉絲蛋炒飯90元<br>素炒飯90元<br>綜合炒飯90元<br>沙茶牛肉湯麵90元<br>沙茶牛肉炒麵90元<br>
-        沙茶羊肉湯麵90元<br>沙茶羊肉炒麵90元<br>沙茶肉絲湯麵90元<br>沙茶肉絲炒麵90元<br>什錦湯麵90元<br>什錦炒麵90元<br>蝦仁湯麵90元<br>
-        蝦仁炒麵90元<br>肉絲湯麵90元<br>肉絲炒麵90元<br>大滷麵(可素)90元<br>素湯麵90元<br>素炒麵90元<br>蝦仁煎蛋240元<br>
-        菜甫煎蛋(可素)190元<br>九層塔煎蛋(可素)160元<br>蔥煎蛋(可素)150元<br>咖哩花枝煲270元<br>油香花枝270元<br>泰式咖哩蝦球360元<br>
-        鹽酥蝦280元<br>果律蝦球320元<br>炒雙脆270元<br>金莎蝦390元<br>
+    <div id="submenu">辣椒干絲260元 蠔油牛肉煲260元<br>蔥油雞330元 三杯花枝煲330元<br>
+        三杯大腸煲320元 三杯雞肉煲320元<br>蜜汁排骨260元 豉汁排骨260元<br>魚板肉絲260元 醬爆肉絲270元<br>
+        麻辣蹄筋煲290元 紅燒蹄筋煲290元<br>果律蝦球320元 炒雙脆270元<br>金莎蝦390元<br>
       <!-- 改菜單 -->
     </div>
     <div id="comment_title"><b>顧客評論</b></div>
