--- a/士林5.html
+++ b/士林5.html
@@ -9,32 +9,27 @@
     <!-- 改地區 -->
   </head>
   <body>
-    <img src="pic/士林區 P 5.1.jpg" id="img">
+    <img src="pic/士林區 P 5.6.jpg" id="img">
     <!-- 最上面的圖 -->
     <div id="div0"></div>
     <div id="div2"></div>
     <div id="intro">
       <p id="name"><b>及品鍋貼水餃專賣店<br></b></p>
       <!-- 改店名 -->
-      <p id="star"><b>google評價：★★★★☆</b></p></div>
+      <p id="star"><b>google評價：4.4★</b></p></div>
       <!-- google評價 -->
       <div id ="about">
-        <b>店家資訊</b><div style="font-size: 20px;"><br>地址:台北市士林區美崙街93號<br>
+        <b>店家資訊</b><div style="font-size: 20px;"><br>地址：台北市士林區美崙街93號<br>
         <!-- 店家地址 -->
         營業時間：11：10 到 20：30，星期天公休<br>
         <!-- 營業時間 -->
         店家電話：(02)2833-0217</div>
         <!-- 店家電話 -->
       </div>
-    <img src="pic/士林區 5.菜單.jpg" id="img2">
+    <img src="pic/士林區 P 5.3.jpg" id="img2">
     <!-- 右邊那張圖 -->
     <div id="menu"><b>推薦菜單</b></div>
-    <div id="submenu">鍋貼6元/個<br>鮮肉高麗菜水餃7元/個<br>鮮肉韭菜水餃7元/個<br>鮮肉菜肉水餃7.5元/個<br>
-        鮮肉翠玉白菜水餃7.5元/個<br>鮮肉玉米蔬菜水餃8元/個<br>牛肉水餃10元/個<br>酸辣湯餃90元（高/韭）<br>
-        酸辣湯餃95元（菜/白）<br>酸辣湯餃99元（玉米）<br>酸辣湯餃115元（牛肉）<br>酸辣湯30元 玉米濃湯30元<br>
-        每日一湯40元 各式小菜50元<br>豆漿30元 紅茶30元<br>招牌飲料30元<br>鮮肉高麗菜水餃110元/20粒（生/冷）<br>
-        鮮肉韭菜水餃110元/20粒（生/冷）<br>鮮肉菜肉水餃120元/20粒（生/冷）<br>鮮肉翠玉白菜水餃120元/20粒（生/冷）<br>
-        鮮肉玉米蔬菜水餃140元/20粒（生/冷）<br>牛肉水餃160元/20粒（生/冷）<br>
+    <div id="submenu">鮮肉菜肉水餃7.5元/個<br>鮮肉翠玉白菜水餃7.5元/個<br>牛肉水餃10元/個 酸辣湯30元<br>每日一湯40元 招牌飲料30元<br>
         <!-- 改菜單 -->
     </div>
     <div id="comment_title"><b>顧客評論</b></div>
