--- a/大同3.html
+++ b/大同3.html
@@ -16,7 +16,7 @@
     <div id="intro">
       <p id="name"><b>越春真越式傳統牛肉河粉寧夏店<br></b></p>
       <!-- 改店名 -->
-      <p id="star"><b>google評價：★★★★☆</b></p></div>
+      <p id="star"><b>google評價：4.1★</b></p></div>
       <!-- google評價 -->
       <div id ="about">
         <b>店家資訊</b><div style="font-size: 20px;"><br>地址：台北市大同區重慶北路二段57巷19號1樓<br>
@@ -26,20 +26,14 @@
         店家電話：(02)2555-1235</div>
         <!-- 店家電話 -->
       </div>
-    <img src="pic/大同區 3.菜單.jpg" id="img2">
+    <img src="pic/大同區 P 3.3.jpg" id="img2">
     <!-- 右邊那張圖 -->
     <div id="menu"><b>推薦菜單</b></div>
     <div id="submenu">綜合牛肉河粉/米線210元<br>傳統牛肉河粉/米線140元<br>酸辣海鮮河粉/米線190元<br>香茅烤肉河粉/米線140元<br>
-        酸辣豬肉河粉/米線150元<br>香辣雞肉河粉/米線150元<br>酸辣火腿河粉/米線150元<br>酸辣時蔬河粉/米線110元<br>
-        海鮮炒河粉170元 牛肉炒河粉160元<br>乾拌烤肉米線140元<br>乾拌豬肉餅米線140元<br>乾拌炸春捲米線140元<br>經典烤肉米線拼盤140元<br>
-        經典豬肉米線拼盤140元<br>蝦醬炸豆腐米線拼盤210元<br>酸辣海鮮炒飯160元<br>魚露生牛炒飯130元<br>咖哩火腿炒飯120元<br>
-        香茅雞腿飯130元 香茅烤肉飯130元<br>紅燒牛腩飯130元 白飯25元<br>傳統牛肉湯90元 酸辣牛肉湯110元<br>傳統海鮮湯110元 酸辣海鮮湯130元<br>
-        醬爆時蔬110元 蒜爆時蔬100元<br>燙時蔬80元（大）60元（小）<br>豪飽總匯麵包120元 經典烤肉麵包110元<br>人氣火腿麵包120元 牛腩沾麵包110元<br>
-        煉乳沾麵包70元 蔬菜蛋麵包90元<br>靈魂蝦肉生菜春捲100元<br>炸春捲包生菜110元（大）70元（小）<br>香茅爆牛肉260元 越式炸豬肉餅100元<br>
-        越式經典拼盤210元 經典烤肉盤100元<br>酸辣涼拌海鮮200元 炸肉漿火腿90元<br>酸辣涼拌牛肉190元 香茅雞腿90元<br>越式涼拌雞絲110元 紅燒牛腩90元<br>
-        越式涼拌木瓜絲90元 炸豆腐70元<br>冷切豬頭皮火腿90元 炸蝦餅50元<br>越式水果酸奶80元 銀耳燕窩飲40元<br>椰奶優格冰淇淋80元 檸檬綠茶40元<br>
-        越式漂浮冰咖啡80元 可口可樂40元<br>冰滴戀乳咖啡80元 好濃豆奶50元<br>熱戀乳咖啡80元 紅牛能量飲50元<br>越式煉乳奶茶80元 河內啤酒50元<br>
-        椰子水40元 台灣啤酒80元<br>
+        乾拌炸春捲米線140元<br>經典烤肉米線拼盤140元<br>經典豬肉米線拼盤140元<br>
+        豪飽總匯麵包120元 經典烤肉麵包110元<br>人氣火腿麵包120元 牛腩沾麵包110元<br>
+        靈魂蝦肉生菜春捲100元<br>炸春捲包生菜110元（大）70元（小）<br>
+        越式經典拼盤210元 經典烤肉盤100元<br>越式水果酸奶80元 越式漂浮冰咖啡80元<br>越式煉乳奶茶80元 河內啤酒50元<br>
     <!-- 改菜單 -->
     </div>
     <div id="comment_title"><b>顧客評論</b></div>
