--- a/士林2.html
+++ b/士林2.html
@@ -21,7 +21,9 @@
       <div id ="about">
         <b>店家資訊</b><div style="font-size: 20px;"><br>地址：台北市士林區德行東路129巷10號<br>
         <!-- 店家地址 -->
-        營業時間：06：00 到 13:00 / 星期天07：00 到 13：00，星期一、四公休<br>
+        營業時間：<br>
+        星期二、三、五、六：06：00 到 13:00 <br>
+        星期日：07：00 到 13：00<br>星期一、四公休<br>
         <!-- 營業時間 -->
         店家電話：0961-196-423</div>
         <!-- 店家電話 -->
