--- a/士林5.html
+++ b/士林5.html
@@ -21,7 +21,7 @@
       <div id ="about">
         <b>店家資訊</b><div style="font-size: 20px;"><br>地址：台北市士林區美崙街93號<br>
         <!-- 店家地址 -->
-        營業時間：11：10 到 20：30，星期天公休<br>
+        營業時間：11：10 到 20：30，星期日公休<br>
         <!-- 營業時間 -->
         店家電話：(02)2833-0217</div>
         <!-- 店家電話 -->
