--- a/大同4.html
+++ b/大同4.html
@@ -21,7 +21,7 @@
       <div id ="about">
         <b>店家資訊</b><div style="font-size: 20px;"><br>地址：台北市大同區迪化街二段215-8號<br>
         <!-- 店家地址 -->
-        營業時間：09：00 到 19:30，星期天公休<br>
+        營業時間：09：00 到 19:30，星期日公休<br>
         <!-- 營業時間 -->
         店家電話：(02)2598-1388</div>
         <!-- 店家電話 -->
