專案大概完成

--- a/新莊3.html
+++ b/新莊3.html
@@ -9,7 +9,7 @@
     <!-- 改地區 -->
   </head>
   <body>
-    <img src="新莊 3.jpeg" id="img">
+    <img src="新莊 3.jpg" id="img">
     <!-- 最上面的圖 -->
     <div id="div0"></div>
     <div id="div2"></div>
